# prost_codegen_bug

./: Cargo.toml
src/: build.rs  main.rs  mybuf.proto
