[package]
name = "prost_issue"
version = "0.1.0"
authors = ["Nicholas McDaniel <nickmcdaniel00@gmail.com>"]
edition = "2018"

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"

[build-dependencies]
prost-build = "0.6.1"
